--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,11 @@
-<p>hello,world!</p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="refresh" content="2;url=http://cyfblog.ga" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>猪油为你跳转中，请稍等</title>
+</head>
+<body>
+<h1>猪油短链</h1>
+</body>
+</html>
